# opencv-example-rs

./: Cargo.toml  Cross.toml  Makefile  README.md
docker/: cross-opencv-rpi01.Dockerfile  cross-opencv-winpc.Dockerfile
src/: main.rs
src/video_devices/: device.rs  mod.rs
src/video_devices/linux/: mod.rs  v4l2.rs
src/video_devices/linux/v4l2/: ioctl.rs
src/video_devices/windows/: mod.rs  msmf.rs
