[package]
name = "opencv-example-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.84.4", default-features = false, features = ["videoio", "imgcodecs"]}
anyhow = "1.0.73"
regex = "1.9.3"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.26.2", default-features = false, features = ["ioctl"]}

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51.0", default-features = false, features = [
        "Win32_Media_MediaFoundation",
        "Win32_Foundation",
        "Win32_System_WinRT"
]}
